# qfusion

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CNAME  Makefile  README.md  _config.yml  appveyor-linux.yml  appveyor-windows.yml  index.html  index.md  make.lua  params.json  uncrustify.cfg  underlined_libraries.diff
source/: .clang-format  Android.mk  CMakeLists.txt  CMakePresets.json  Makefile  WC  clang_format.sh  package_assets.cmake  premake4.lua  qfusion.premake  qfusion.sln  qfusion.vcxproj  qfusion.vcxproj.filters  qfusion_server.premake  qfusion_server.vcxproj  qfusion_server.vcxproj.filters  qfusiongame.sln
source/android/: RocketControls.mk  RocketCore.mk  android_client.c  android_clipboard.c  android_console.c  android_glw.c  android_glw.h  android_input.c  android_lib.c  android_qgl.c  android_snd.c  android_sys.c  android_sys.h  android_time.c  android_vfs.c  android_vid.c  cares.mk  curl.mk  ogg.mk  openssl-crypto.mk  openssl-ssl.mk  theora.mk  vorbis.mk
source/angelwrap/: Android.mk  CMakeLists.txt  angelwrap.premake  angelwrap.vcxproj  angelwrap.vcxproj.filters  qas_angelwrap.cpp  qas_debugger.cpp  qas_local.h  qas_main.cpp  qas_precompiled.cpp  qas_precompiled.h  qas_public.h  qas_syscalls.cpp  qas_syscalls.h
source/cgame/: Android.mk  CMakeLists.txt  cg_as_camera.cpp  cg_as_cmds.cpp  cg_as_input.cpp  cg_as_local.h  cg_as_main.cpp  cg_as_refscene.cpp  cg_as_screen.cpp  cg_as_sound.cpp  cg_ascript.cpp  cg_boneposes.cpp  cg_boneposes.h  cg_chat.cpp  cg_cmds.cpp  cg_damage_indicator.cpp  cg_decals.cpp  cg_democams.cpp  cg_democams.h  cg_draw.cpp  cg_effects.cpp  cg_ents.cpp  cg_events.cpp  cg_hud.cpp  cg_input.cpp  cg_lents.cpp  cg_local.h  cg_main.cpp  cg_media.cpp  cg_overlay.cpp  cg_players.cpp  cg_pmodels.cpp  cg_pmodels.h  cg_polys.cpp  cg_predict.cpp  cg_public.h  cg_scoreboard.cpp  cg_screen.cpp  cg_syscalls.cpp  cg_syscalls.h  (+9 more)
source/cin/: Android.mk  CMakeLists.txt  cin.c  cin.premake  cin.vcxproj  cin.vcxproj.filters  cin_local.h  cin_main.c  cin_ogg.c  cin_ogg.h  cin_public.h  cin_roq.c  cin_roq.h  cin_syscalls.c  cin_syscalls.h  cin_theora.c  cin_theora.h  roq.h
source/client/: Android.mk  CMakeLists.txt  cin.c  cin.h  cl_cin.c  cl_demo.c  cl_demo.cpp  cl_game.c  cl_game.cpp  cl_input.c  cl_input.cpp  cl_main.c  cl_main.cpp  cl_microprofile.cpp  cl_mm.c  cl_parse.c  cl_parse.cpp  cl_screen.c  cl_screen.cpp  cl_serverlist.c  cl_serverlist.cpp  cl_sound.c  cl_sound.cpp  cl_ui.c  cl_ui.cpp  cl_vid.c  cl_vid.cpp  client.h  console.c  console.cpp  console.h  ftlib.c  ftlib.cpp  ftlib.h  input.h  keys.c  keys.cpp  keys.h  l10n.c  l10n.cpp  (+8 more)
source/cmake/: FindAngelscript.cmake  FindOgg.cmake  FindRocket.cmake  FindSDL2.cmake  FindTheora.cmake  FindVorbis.cmake  QfusionUtils.cmake  i386-linux-gnu.cmake  i686-mingw.cmake  x86_64-mingw.cmake
source/egl/: egl_glw.c  egl_glw.h  egl_qgl.c
source/ftlib/: Android.mk  CMakeLists.txt  ftlib.c  ftlib.premake  ftlib.vcxproj  ftlib.vcxproj.filters  ftlib_draw.c  ftlib_local.h  ftlib_main.c  ftlib_public.h  ftlib_syscalls.c  ftlib_syscalls.h
source/game/: Android.mk  CMakeLists.txt  g_ai.cpp  g_ai.h  g_as_gametypes.cpp  g_as_local.h  g_as_maps.cpp  g_as_pmove.cpp  g_ascript.cpp  g_awards.cpp  g_botai.cpp  g_botai.h  g_callvotes.cpp  g_chase.cpp  g_clip.cpp  g_cmds.cpp  g_combat.cpp  g_frame.cpp  g_func.cpp  g_gameteams.cpp  g_gametypes.cpp  g_gametypes.h  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_mm.cpp  g_monster.cpp  g_monsterai.cpp  g_phys.cpp  g_public.h  g_spawn.cpp  g_spawnpoints.cpp  g_svcmds.cpp  g_syscalls.cpp  g_syscalls.h  g_target.cpp  g_trigger.cpp  g_utils.cpp  g_weapon.cpp  (+11 more)
source/gameshared/: anorms.h  config.h  gs_ascript.cpp  gs_ascript.h  gs_gameteams.c  gs_gameteams.cpp  gs_items.c  gs_items.cpp  gs_misc.c  gs_misc.cpp  gs_players.c  gs_players.cpp  gs_pmove.c  gs_pmove.cpp  gs_public.h  gs_qrespath.h  gs_ref.h  gs_slidebox.c  gs_slidebox.cpp  gs_trajectory.c  gs_weapondefs.c  gs_weapondefs.cpp  gs_weapons.c  gs_weapons.cpp  q_angeliface.h  q_arch.h  q_collision.h  q_comref.h  q_cvar.h  q_dynvar.h  q_keycodes.h  q_math.c  q_math.cpp  q_math.h  q_shared.c  q_shared.cpp  q_shared.h  q_trie.c
source/glsl/: colorCorrection.frag.glsl  colorCorrection.vert.glsl  defaultCelshade.frag.glsl  defaultCelshade.vert.glsl  defaultColorCorrection.frag.glsl  defaultDistortion.frag.glsl  defaultFXAA.frag.glsl  defaultFog.frag.glsl  defaultFog.vert.glsl  defaultKawaseBlur.frag.glsl  defaultKawaseBlur.vert.glsl  defaultMaterial.frag.glsl  defaultMaterial.vert.glsl  defaultOutline.frag.glsl  defaultQ3AShader.frag.glsl  defaultQ3AShader.vert.glsl  defaultRGBShadow.frag.glsl  defaultShadowmap.frag.glsl  defaultShadowmap.vert.glsl  defaultYUV.frag.glsl  defaultYUV.vert.glsl  material.frag.glsl  material.vert.glsl  outline.frag.glsl  outline.vert.glsl  q3AShader.frag.glsl  q3AShader.vert.glsl
source/irc/: Android.mk  CMakeLists.txt  irc.premake  irc.vcxproj  irc.vcxproj.filters  irc_client.c  irc_client.h  irc_common.c  irc_common.h  irc_gui.c  irc_interface.c  irc_interface.h  irc_listeners.c  irc_listeners.h  irc_logic.c  irc_logic.h  irc_net.c  irc_net.h  irc_protocol.c  irc_protocol.h  irc_rcon.c  irc_rcon.h
source/mac/: Mental-Info.plist  Qfusion-Info.plist  SDLMain.h  SDLMain.m  Warsow SDL-Info.plist  Warsow-Info.plist  mac_glw.c  mac_glw.h  mac_glw.m  mac_input.m  mac_qgl.c  mac_sys.m  mac_vid.c  mac_vid.m  wsw_icon.icns
source/matchmaker/: mm_common.c  mm_common.h  mm_query.c  mm_query.h  mm_rating.c  mm_rating.h  mm_ui.h
source/null/: ascript_null.c  cl_null.c  clipboard_null.c  cm_null.c  irc_null.c  mm_null.c  sv_null.c  sys_null.c  sys_vfs_null.c  vid_null.c
source/progs/: README.md
source/qalgo/: base64.c  base64.cpp  base64.h  glob.c  glob.cpp  glob.h  half_float.c  half_float.cpp  half_float.h  hash.c  hash.cpp  hash.h  md5.c  md5.h  q_trie.c  q_trie.cpp  q_trie.h  rng.cpp  rng.h
source/qcommon/: anticheat.c  anticheat.h  application.h  ascript.c  ascript.cpp  asyncstream.c  asyncstream.cpp  asyncstream.h  autoupdate.c  base64.c  bsp.c  (+89 more)
(+3030 files in other folders)
